@startuml
title Deactivate HR Staff - Class Diagram

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "DTOs" #DDDDDD {
    class DeactivateStaffDto <<Input>> {
        + StaffId: Guid
        + Reason: string
        + SendNotification: bool
        + EffectiveDate: DateTime?
        + Notes: string
    }

    class StaffStatusChangeDto <<Output>> {
        + StaffId: Guid
        + FullName: string
        + Email: string
        + PreviousStatus: bool
        + NewStatus: bool
        + Action: string
        + Reason: string
        + ChangeTimestamp: DateTime
        + PerformedBy: string
    }
}

package "Controller Layer" #LightBlue {
    class TeamManagementController {
        - _service: ITeamManagementAppService
        --
        + DeactivateStaffAsync(input: DeactivateStaffDto): Task<StaffStatusChangeDto>
    }
}

package "Service Layer" #LightYellow {
    interface ITeamManagementAppService {
        + DeactivateStaffAsync(input: DeactivateStaffDto): Task<StaffStatusChangeDto>
    }

    class TeamManagementAppService {
        - _employeeRepo: IRepository<EmployeeProfile>
        - _recruiterRepo: IRepository<RecruiterProfile>
        - _userManager: IdentityUserManager
        --
        + DeactivateStaffAsync(input: DeactivateStaffDto): Task<StaffStatusChangeDto>
        + GetCurrentUserProfileAsync(): Task<object>
        + IsCurrentUserLeader(profile: object): bool
    }
}

package "Repository Layer" #LightGreen {
    interface "IRepository<T>" as IRepository {
        + FindAsync(id: Guid): Task<T>
        + UpdateAsync(entity: T): Task<T>
    }

    class IdentityUserManager {
        + GetByIdAsync(userId: Guid): Task<IdentityUser>
    }
}

package "Domain Models" #LightCoral {
    class EmployeeProfile {
        + Id: Guid
        + UserId: Guid
        + Department: string
        + IsSuperAdmin: bool
        + Status: bool
        --
        + User: IdentityUser
    }

    class RecruiterProfile {
        + Id: Guid
        + UserId: Guid
        + CompanyId: int
        + IsLead: bool
        + Status: bool
        --
        + User: IdentityUser
        + Company: Company
    }

    class IdentityUser {
        + Id: Guid
        + UserName: string
        + Email: string
        + Name: string
        + Surname: string
    }

    class Company {
        + Id: int
        + Name: string
        + Address: string
    }
}

' Relationships - Controller to DTOs
TeamManagementController ..> DeactivateStaffDto : «use»
TeamManagementController ..> StaffStatusChangeDto : «use»

' Relationships - Controller to Service
TeamManagementController ..> ITeamManagementAppService : «use»

' Relationships - Service Implementation
TeamManagementAppService ..|> ITeamManagementAppService : «implement»

' Relationships - Service to Repository
TeamManagementAppService ..> IRepository : «use»
TeamManagementAppService ..> IdentityUserManager : «use»

' Relationships - Service to Domain
TeamManagementAppService ..> EmployeeProfile : «manage»
TeamManagementAppService ..> RecruiterProfile : «manage»

' Relationships - Domain Models
EmployeeProfile --> IdentityUser : «has»
RecruiterProfile --> IdentityUser : «has»
RecruiterProfile --> Company : «belongs to»

' Relationships - Repository to Domain
IRepository ..> EmployeeProfile
IRepository ..> RecruiterProfile
IdentityUserManager ..> IdentityUser

@enduml

